# fanuc_driver

./: .dockerignore  .gitignore  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  avro.h  broker1.yml  data.c  data.h  debug.yml  docker-compose.yml  main.c  main.py  prod.yml  query-activity-graph.sql  query-activity-periods-faster.sql  query-activity-periods.sql  query-block-progression.sql  query-completed-program-parts.sql  query-execution-distribution-totals.sql  query-execution-distribution.sql  query-execution-duration.sql  query-executions-mod.sql  query-executions.sql  query-most-recent-activity.sql  query-per-machine-per-day.sql  query-programs.sql  query.sql  requirements.txt  setup.sh  test.py  v2.py  x86.Dockerfile
avsc/: Datum.avsc  MachineAxisDetail.avsc  MachineCycleTime.avsc  MachineDetail.avsc  MachineDynamic.avsc  MachineProgram.avsc  MachineStatus.avsc  MachineToolInfo.avsc
connect/: Dockerfile  connect-log4j.properties  connector0.properties  connector1.properties.template  entrypoint.sh  setup.sh  worker.properties  worker.properties.template
debug/: .gitignore  Dockerfile  consumer.py  dump.py  main.py  requirements.txt  run.sh  table.txt
docker/connect/: Dockerfile
docker/driver/: Dockerfile
docker/monitor/: Dockerfile  api.Dockerfile  daemon.Dockerfile
docker/streams/: Dockerfile
driver/: CMakeLists.txt  README.md
driver/src/: check.c  common.h  config.c  data.c  data.h  debug.c  main.c
jupyter/: Meta Stats.ipynb  machine activity 2.ipynb  machine activity.ipynb
monitor/: Dockerfile  api.py  daemon.py  dev.yml  docker-compose.yml  mock-test.sh  requirements.txt  test-daemon.py  v2.py
monitor/requirements/: api.txt
monitor/sql/: init.sh
scripts/: count-topic.sh  delete-topic-kafka.sh  list-topics-kafka.sh  query-latest.sh  query.sh  reset-kafka-to.sh  reset-kafka.sh  watch-kafka-avro.sh  watch-kafka.sh
spark/: Dockerfile  main.py  requirements.txt
src/: data.c  data.h  main.c
streams/: Dockerfile  README.md  build.gradle  settings.gradle
streams/gradle/wrapper/: gradle-wrapper.properties
streams/src/main/avro/: AdapterDatum.avsc  AdapterDatumSer.avsc  ExecutionDatum.avsc  ExecutionWithDurationDatum.avsc  ExecutionWithSessionDatum.avsc  PartCompletedEventDatum.avsc  PartCountDatum.avsc  PartCountDetailDatum.avsc  ProgramDetailDatum.avsc  SampleCountDatum.avsc  SessionDatum.avsc
streams/src/main/kotlin/: AdapterDatumTransformer.kt  AvroSerde.kt  SerialMonitoringStreamProcessing.kt  Staging.kt
